--- a/public/admin.html
+++ b/public/admin.html
@@ -436,7 +436,7 @@
         document.addEventListener('DOMContentLoaded', () => {
             checkAuth();
 
-            //Event listeners
+            //Evenimente
             document.getElementById('add-product-btn').addEventListener('click', () => showProductForm());
             document.getElementById('cancel-form').addEventListener('click', hideProductForm);
             document.getElementById('product-form-element').addEventListener('submit', saveProduct);
