--- a/public/cart.html
+++ b/public/cart.html
@@ -296,7 +296,7 @@
             currentView = 'success';
         }
 
-        // Event listeners
+        //Evenimente
         document.addEventListener('DOMContentLoaded', () => {
             displayCart();
 
