--- a/public/products.html
+++ b/public/products.html
@@ -193,7 +193,7 @@
             `).join('');
         }
 
-        // Initialize page
+        //Initializeaza pagina
         document.addEventListener('DOMContentLoaded', loadProducts);
     </script>
 
